# property-tracker

./: README.md  main.py  property_tracker.db  pyproject.toml  scratch.ipynb  scratch2.ipynb  simulation.py  st.py
frontend/: investor.py  property.py  simulate.py
property_tracker/: commands.py  database.py  models.py
property_tracker/commands/: finance.py  investor.py  property.py  simulate.py
property_tracker/models/: __init__.py  expense.py  finance.py  investor.py  lease.py  maintenance_request.py  payment.py  property.py  tenant.py
property_tracker/repositories/: __init__.py  expense.py  finance.py  investor.py  lease.py  maintenance_request.py  payment.py  property.py  tenant.py
property_tracker/services/: __init__.py  expense.py  finance.py  investor.py  lease.py  maintenance_request.py  payment.py  property.py  simulate.py  simulate_v2.py  tenant.py
tests/: tests_finance.py
