[tool.poetry]
name = "property-tracker"
version = "0.1.0"
description = "Tracking your real estate investments"
authors = ["Kaan Karakeben <karakebenkaan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"
typer = "^0.12.3"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
