[tool.poetry]
name = "property-tracker"
version = "0.1.0"
description = "Tracking your real estate investments"
authors = ["Kaan Karakeben <karakebenkaan@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
property_tracker = "main:app"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"
typer = "^0.12.3"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
black = "^24.8.0"
pylint = "^3.2.6"
pytest = "^8.3.2"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest]
addopts = ["--cov=property_tracker", "--cov-report=term-missing"]
testpaths = ["tests"]
